# TCC_Image_Quality_Assesment

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  MLproject  Makefile  README.md  batch.ipynb  batchFeatures.py  blur.ipynb  datanov.csv  datanov2.csv  pyproject.toml
.ipynb_checkpoints/: AverageLuminance-checkpoint.ipynb
extracao/: data.csv  dataBest.csv  keras.pkl
mlruns/0/: meta.yaml
mlruns/1/: meta.yaml
notebooks/: 1 - Treinando um Modelo Simples.ipynb  2 - Validação Cruzada.ipynb  3 - Análise da Validação Cruzada.ipynb  3 - Busca nos Híper-Parâmetros-Copy1.ipynb  3 - Busca nos Híper-Parâmetros.ipynb  4 - Analise da Busca nos Híper-Parâmetros.ipynb  5 - Busca em Famílias de Modelos.ipynb  6 - Analise da Busca dos Modelos-Copy1.ipynb  6 - Analise da Busca dos Modelos-Copy2.ipynb  6 - Analise da Busca dos Modelos.ipynb  7 - VGG16 Features.ipynb  AverageLuminance.ipynb  ModelAnalysis.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled3.ipynb  _config.yml  blur.ipynb  crossValidation.ipynb  hiperparameters.ipynb  hue_distribution.ipynb  luminance.ipynb  modelo.ipynb  pyproject.toml  references.bib  simplicity_edge_ditribution.ipynb  traininig.ipynb
notebooks/.ipynb_checkpoints/: AverageLuminance-checkpoint.ipynb
notebooks/FeatureAnalysis/: Feature_Analysis.ipynb  Untitled.ipynb
notebooks/FeatureExtraction/: 1 - AverageLuminance.ipynb  1 - Luminância.ipynb  2 - Desfoque.ipynb  3 - Distribuição de Cores.ipynb  AverageLuminance.ipynb  (+5 more)
src/: batchFeatures.py  config.yaml  features.py  kerasFeatures.py  testedump.py  tmp.py  train.py  vgg16Features.py
(+73 files in other folders)
