[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["iangalvao <iansgalvao@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.10.5"
jupyter = "^1.0.0"
numpy = "1.23.0"
matplotlib = "^3.5"
scipy = "^1.8"
mlflow = "^1.28.0"
scikit-learn = "^1.1.2"
scikit-image = "^0.19.3"
plotly = "^5.11.0"
tensorflow = "^2.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poetry-lock-package = "^0.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"